# Vibe-1

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  PROJECT_PLAN_V2.md  RUNBOOK.md  abbey.html  about.html  editor_setup.md  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  robots.txt  rocks.html  sara-psychiatric.html  sitemap.xml  utah_communities.csv
.claude/: settings.json
.github/workflows/: bake-hidden-gem.yml
data/: selected_for_mvp.csv
docs/: README.md  architecture.md  content-model.md  editor-handbook.md  runbook.md  troubleshooting.md  worktree-inventory.md
hidden-gem/: 404.html  abbey.html  about.html  editor_setup.md  index.html  keira-aesthetics.html  kiera-aesthetics.html  netlify.toml  no-surprises-act.html  privacy.html  robots.txt  sam-pediatric.html  sara-equine.html  sara-psychiatric.html  sitemap.xml  thanks.html
hidden-gem/css/: editor.css  styles.css
hidden-gem/js/: editor.js  main.js
hidden-gem/netlify/functions/: content.mjs  image.mjs  lock.mjs  otp.mjs  submission-created.mjs
js/: main.js
netlify/functions/: image.mjs  lock.mjs
public/: _headers  index.html  script.js  styles.css
public/sunflower-ridge-assisted-living/: index.html
scripts/: bake_hidden_gem_edits.py
src/: audit.py  generate.py  scrape.py
src/lib/: paths.py  schema.py
src/templates/warm_traditional/: index.html.j2  styles.css
work/audits/: sunflower-ridge-assisted-living.json
work/copy/: sunflower-ridge-assisted-living.json
work/scrapes/sunflower-ridge-assisted-living/: SCRAPE_FAILED.md  scrape.json
