[project]
name = "silverlist"
version = "0.1.0"
description = "Senior-living website outreach pipeline (Phase 1 MVP)."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "pydantic>=2.9",
    "jinja2>=3.1",
    "pillow>=11.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
